# hydro-wire

./: .gitignore  INSTALLATION_GUIDE.md  LIBRARY_USAGE.md  LICENSE  MANIFEST.in  PUBLICATION_CHECKLIST.md  PUBLISH_GUIDE.md  QUICK_REFERENCE.md  README.md  READY_FOR_PYPI.md  REFACTORING_NOTES.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  publish.yml
examples/: advanced_integration.py  basic_usage.py
hydrowire/: __init__.py  basic_pwm.py  client.py  led.py  manager.py
hydrowire/devices/: basic_pwm.py  led.py
rov_lib/: __init__.py  client.py  manager.py
tests/: test_client.py
