[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rov-interface"
version = "0.0.1"
description = "Python library for applications to interact with ROV (Remotely Operated Vehicle) systems over WebSocket"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "ROV Interface Contributors", email = "contact@rov-interface.dev"}
]
keywords = ["rov", "websocket", "robotics", "remotely-operated-vehicle", "control", "async"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Interface Engine/Protocol Translator",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Environment :: Web Environment",
]
dependencies = [
    "websockets>=10.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.20.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/rov-interface"
Documentation = "https://github.com/yourusername/rov-interface#readme"
Repository = "https://github.com/yourusername/rov-interface.git"
"Bug Tracker" = "https://github.com/yourusername/rov-interface/issues"

[tool.setuptools.packages]
find = { where = ["."] }

[tool.setuptools.package-data]
rov_lib = ["py.typed"]

