[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hydrowire"
version = "0.0.1"
description = "Python library for applications to interact with ROV (Remotely Operated Vehicle) systems over WebSocket"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "HydroWire Contributors", email = "contact@hydrowire.dev"}
]
keywords = ["rov", "websocket", "robotics", "remotely-operated-vehicle", "control", "async"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Interface Engine/Protocol Translator",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Environment :: Web Environment",
]
dependencies = [
    "websockets>=10.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.20.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/hydrowire"
Documentation = "https://github.com/yourusername/hydrowire#readme"
Repository = "https://github.com/yourusername/hydrowire.git"
"Bug Tracker" = "https://github.com/yourusername/hydrowire/issues"

[tool.setuptools.packages]
find = { where = ["."] }

[tool.setuptools.package-data]
hydrowire = ["py.typed"]

